<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_settings_bx"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share_bx"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_menu_contact_bx"
        android:title="@string/menu_contact" />
    <item
        android:id="@+id/nav_check_update"
        android:icon="@drawable/ic_menu_update_bx"
        android:title="@string/menu_check_update" />
    <item
        android:id="@+id/nav_privacy_policy"
        android:icon="@drawable/ic_menu_privacy_bx"
        android:title="@string/menu_privacy_policy" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_menu_about_bx"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_logout_bx"
        android:title="@string/menu_logout" />
    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_menu_exit_bx"
        android:title="@string/menu_exit" />
</menu>
